bug squashing

--- a/src/app/beast-view/beast-view.component.css
+++ b/src/app/beast-view/beast-view.component.css
@@ -158,6 +158,7 @@ mat-toolbar {
     width: unset;
     margin: 15px 0px;
     flex-wrap: wrap;
+    align-content: center;
 }
 
 .top-toolbar {
